--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>3D房屋</title>
     <link rel="stylesheet" href="css/icon.css">
     <link rel="stylesheet" href="css/room.css">
     <script src="js/room.js"></script>
