--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
             <div class="panel">
             </div>
             <div class="panel left">
-                  <div class="iconfont icon-mysql">
-
-                  </div>
-                  <div class="iconfont icon-html">
-
-                  </div>
-                  <div class="iconfont icon-php"></div>
-                  <div class="iconfont icon-nodejs"></div>
+                <div class="iconfont icon-oGDwRZJ01"></div>
+                <div class="iconfont icon-js"></div>
+                <div class="iconfont icon-jquery-copy"></div>
+                <div class="iconfont icon-sass"></div>
+                <div class="iconfont icon-angular"></div>
+                <div class="iconfont icon-mysql"></div>
+                <div class="iconfont icon-JS"></div>
+                <div class="iconfont icon-nodejs"></div>
             </div>
             <div class="panel"></div>
             <div class="panel right">
-
-                <div class="iconfont icon-qiyewangguanli">
-
-                </div>
-                <div class="iconfont icon-jquery-copy">
-
-                </div>
-                <div class="iconfont icon-php"></div>
                 <div class="iconfont icon-nodejs"></div>
+                <div class="iconfont icon-less"></div>
+                <div class="iconfont icon-css3"></div>
+                <div class="iconfont icon-h5"></div>
+                <div class="iconfont icon-touch"></div>
+                <div class="iconfont icon-gulpwhitetext"></div>
+                <div class="iconfont icon-r-rect"></div>
+                <div class="iconfont icon-qianduan"></div>
             </div>
             <div class="panel"></div>
             <div class="panel"></div>
