--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="scene">
         <div class="room">
-            <div class="panel">
-            </div>
+            <div class="panel"></div>
             <div class="panel left">
                 <div class="iconfont icon-oGDwRZJ01"></div>
                 <div class="iconfont icon-js"></div>
